fixed footer text

--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@
                 >
               </a>
               <p>
-                გმადლობთ Flix Movies-ის ნახვისთვის! ეს ვებსაიტი შევქმენი
+                გმადლობთ  KinoLand-ის ნახვისთვის! ეს ვებსაიტი შევქმენი
                 გართობის მიზნით, იმედია მომავალში საუკეთესო პლატფორმას შევქმნი
                 მთლიანი ფუნქციონალით. თქვენი მხარდაჭერა ბევრს ნიშნავს❤️
               </p>
