--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <!-- MOBILE MENU TOGGLE -->
           <div class="hamburger-menu" id="hamburger-menu">
             <div class="hamburger"></div>
-          </div>
+          </div> <!-- END MOBILE MENU TOGGLE -->
         </div>
       </div>
     </div>
@@ -386,7 +386,7 @@
           <a href="#" class="movie-item">
             <img src="./images/movies/resident-evil.jpg" alt="" />
             <div class="movie-item-content">
-              <div class="movie-item-title">Resident Evil</div>
+              <div class="movie-item-title">ბოროტების სავანე</div>
               <div class="movie-infos">
                 <div class="movie-info">
                   <i class="bx bxs-star"></i>
